# Marjon

./: .gitignore  DOCUMENTATION.md  README.md  TASKS.md  docker-compose.yml  render.yaml
backend/: .env  .env.example  Dockerfile  alembic.ini  app.db  auth.py  config.py  main.py  models.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  schemas.py
backend/app/: config.py  main.py
backend/app/infrastructure/database/: session.py
backend/app/integrations/: devent.py
backend/app/middleware/: tenant_middleware.py
backend/app/modules/admin_reports/: router.py  schemas.py  service.py
backend/app/modules/admin_settings/: models.py  router.py  schemas.py
backend/app/modules/analytics/: router.py  schemas.py  service.py
backend/app/modules/audit/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  security.py  service.py
backend/app/modules/companies/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/shared/: admin_crud.py  base_model.py  base_repository.py  base_schema.py  exceptions.py  pagination.py
backend/migrations/: env.py
backend/migrations/versions/: 20260604_3dd82166af1e_initial_schema.py  20260611_a1f2admin01_hq_admin_panel.py  20260611_warehouse_documents.py
backend/print_agent/: agent.py  agent_config.json
backend/routers/: auth_router.py  users_router.py
backend/scripts/: enable_rls.py  smoke_admin.py
backend/tests/: README.md  conftest.py  test_auth.py  test_tenant_isolation.py
(+153 files in other folders)
